check css files to pass validator

--- a/blogweb/app/static/index.css
+++ b/blogweb/app/static/index.css
@@ -202,34 +202,22 @@
 }
 
 
-/* .tabs-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-} */
 
-.tabcontent {
+.index-tabcontent {
   margin-top: 14px;
   display: none;
-
-  .tabcontent-post {
-    min-height: 800px !important;
-  }
-
 }
 
-.tabcontent:first-child {
+.index-tabcontent-post {
+  min-height: 800px !important;
+}
+
+.index-tabcontent:first-child {
   display: block;
-
-  .tabcontent-post {
-    min-height: 800px !important;
-
-  }
 }
 
 
-.tabcontent-post-title {
+.index-tabcontent-post-title {
   padding: 8px;
   height: 40px;
   width: 100%;
@@ -240,37 +228,34 @@
   color: #fff;
   font-size: 16px;
   border-radius: 10px;
+}
 
-  .title-left {
-    width: 80px !important;
+.index-title-left {
+  width: 80px !important;
+}
 
+.index-title-middle {
+  left: 0;
+  width: 60%;
+  margin-left: 4px;
+}
 
-  }
+.index-title-right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .title-middle {
-    left: 0;
-    width: 60%;
-    margin-left: 4px;
-  }
+.index-title-count {
+  display: flex;
+  align-items: center;
+  width: 100px;
+  justify-content: center;
 
-  .title-right {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+}
 
-    .title-count {
-      display: flex;
-      align-items: center;
-      width: 100px;
-      justify-content: center;
-
-    }
-
-    .title-date {
-      width: 200px;
-    }
-  }
-
+.index-title-date {
+  width: 200px;
 }
 
 .questionform {
