--- a/blogweb/app/static/result_list.css
+++ b/blogweb/app/static/result_list.css
@@ -1,12 +1,11 @@
-.post {
+.result-list {
   display: flex;
   align-items: center;
-
-  .post-text {
-    text-decoration: none;
-    font-size: 20px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+}
+.result-list-text {
+  text-decoration: none;
+  font-size: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
