--- a/blogweb/app/static/userPopup.css
+++ b/blogweb/app/static/userPopup.css
@@ -1,24 +1,21 @@
-.user-popup {
+.user-popup{
   display: flex;
   flex-direction: column;
+}
 
+.popup-top-right {
+  display: flex;
+  flex-direction: column;
+}
 
-  .popup-top {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.popup-bottom {}
 
-    .popup-top-right {
-      display: flex;
-      flex-direction: column;
+.about-me {
+  font-family: 'Poppins', sans-serif;
+}
 
-    }
-
-  }
-
-  .popup-bottom {
-    .about-me{
-      
-    }
-  }
+.popup-top {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
