--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -43,23 +43,23 @@
 		</ul>
 		<div class="tabs-container">
 
-			<div id="tab1" class="tabcontent" style="display: block;">
-				<div class="tabcontent-post">
-					<div class=tabcontent-post-title>
-						<div class=title-left>
+			<div id="tab1" class="index-tabcontent" style="display: block;">
+				<div class="index-tabcontent-post">
+					<div class="index-tabcontent-post-title">
+						<div class="index-title-left">
 							Post
 						</div>
-						<div class=title-middle>
-							<div class="post-title">
+						<div class="index-title-middle">
+							<div class="index-post-title">
 								Question Title
 							</div>
 
 						</div>
-						<div class=title-right>
-							<div class="title-count">
+						<div class="index-title-right">
+							<div class="index-title-count">
 								Reply Count
 							</div>
-							<div class="title-date">
+							<div class="index-title-date">
 								Date
 							</div>
 
@@ -124,22 +124,22 @@
 			</div>
 
 			<!-- Follow post -->
-			<div id="tab2" class="tabcontent">
-				<div class="tabcontent-post">
-					<div class=tabcontent-post-title>
-						<div class=title-left>
+			<div id="tab2" class="index-tabcontent">
+				<div class="index-tabcontent-post">
+					<div class="index-tabcontent-post-title">
+						<div class="index-title-left">
 							Post
 						</div>
-						<div class=title-middle>
-							<div class="post-title">
+						<div class="index-title-middle">
+							<div class="index-post-title">
 								Question Title
 							</div>
 						</div>
-						<div class=title-right>
-							<div class="title-count">
+						<div class="index-title-right">
+							<div class="index-title-count">
 								Reply Count
 							</div>
-							<div class="title-date">
+							<div class="index-title-date">
 								Date
 							</div>
 						</div>
