--- a/blogweb/app/templates/_post_list.html
+++ b/blogweb/app/templates/_post_list.html
@@ -6,29 +6,29 @@
 
 <div>
   <tr style="vertical-align: top;">
-    <div class="post">
-      <div class="post-left">
+    <div class="post-list">
+      <div class="post-list-left">
         <img style="margin-left:10px" crossorigin="anonymous" src="{{ post.author.avatar(80) }}" alt="useravatar">
       </div>
-      <div class="post-middle">
-        <div class="post-middle-content">
+      <div class="post-list-middle">
+        <div class="post-list-middle-content">
           <div>
             <a class="user_popup" href="{{ url_for('user', username=post.author.username) }}">{{
               post.author.username }}</a>
           </div>
 
-          <div class="post-title">
-            <a class="post-title-text" href="{{ url_for('post_detail', post_id=post.id) }}">{{
+          <div class="post-list-title">
+            <a class="post-list-title-text" href="{{ url_for('post_detail', post_id=post.id) }}">{{
               post.title }}</a>
           </div>
         </div>
 
       </div>
-      <div class="post-count">
+      <div class="post-list-count">
         {{ post.replies_count() }}
       </div>
-      <div class=post-right>
-        <div class="post-date">
+      <div class="post-list-right">
+        <div class="post-list-date">
           <div>
             {{ post.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}
           </div>
