--- a/blogweb/app/templates/_reply_list.html
+++ b/blogweb/app/templates/_reply_list.html
@@ -6,31 +6,31 @@
 
 <table>
   <tr style="vertical-align: top;">
-    <div class="reply">
-      <div class="reply-left">
+    <div class="reply-list">
+      <div class="reply-list-left">
         <img src="{{ post.author.avatar(80) }}" crossorigin="anonymous" alt="useravatar">
 
       </div>
-      <div class="reply-middle">
-        <div class="reply-middle-content">
+      <div class="reply-list-middle">
+        <div class="reply-list-middle-content">
           <div>
             <a class="user_popup" href="{{ url_for('user', username=post.author.username) }}">{{
               reply.user.username }}</a>
           </div>
 
-          <div class="reply-title">
-              <span class="reply-title-text">
+          <div class="reply-list-title">
+              <span class="reply-list-title-text">
                 {{ reply.content | safe}}
               </span>
           </div>
         </div>
-        <div class = "reply-middle-id">
+        <div class = "reply-list-middle-id">
           {{reply.id}}
 
         </div>
 
       </div>
-      <div class="reply-delete">
+      <div class="reply-list-delete">
 
         <form action="{{ url_for('delete_reply', reply_id=reply.id) }}" method="post">
           {% if reply.user_id == current_user.id %}
@@ -43,12 +43,10 @@
         </form>      
       
       </div>
-      <div class=reply-right>
-        <div class="reply-date">
+      <div class=reply-list-right>
+        <div class="reply-list-date">
             {{ reply.timestamp.strftime('%Y-%m-%d %H:%M:%S') }}
         </div>
-
-
       </div>
 
     </div>
