--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -210,7 +210,7 @@
 
 
 	<!-- Modal -->
-	<div class="modal fade" id="warnModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<div class="modal fade" id="warnModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header">
