--- a/blogweb/app/static/post_list.css
+++ b/blogweb/app/static/post_list.css
@@ -9,7 +9,7 @@
 .post-list-middle {
   display: flex;
   flex-direction: column;
-  width: 60%;
+  min-width: 60%;
 }
 
 .user_popup{
@@ -39,7 +39,7 @@
 
 .post-list-count {
   height: 100%;
-  width: 100px;
+  min-width: 100px;
   font-size: 20px;
   margin-top: 10px;
   white-space: nowrap;
@@ -51,15 +51,14 @@
 }
 
 
-.post-list-right {
 
-}
 .post-list-date {
   display: flex;
   flex-direction: column;
   width: 200px;
-  top: 10px;
   color: black;
+  justify-content: center;
+  width: 100%;
 
 }
 .post-list {
