move Philip add pagination to my branch and do some css valiadtion

--- a/blogweb/app/static/post_detail.css
+++ b/blogweb/app/static/post_detail.css
@@ -3,6 +3,7 @@
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.871);
 }
+
 .post-container {
   display: flex;
   justify-content: center;
@@ -13,6 +14,7 @@
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
+
 .post-container .post-detail {
   width: 85%;
 }
@@ -22,6 +24,7 @@
   margin-bottom: 5%;
   padding: 3%;
   border-radius: 10px;
+  background-color: black;
 
 }
 
@@ -33,11 +36,11 @@
     margin-bottom: 28px;
     border: #6C757D 1px solid;
     border-radius: 10px;
-    padding:3%;
+    padding: 3%;
 
 
     .post-detail-top-middle {
-      width:100%;
+      width: 100%;
       display: flex;
 
 
@@ -50,6 +53,10 @@
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
+        }
+
+        .post-title {
+          word-wrap: break-word;
         }
 
         .post-detail-author {
@@ -98,8 +105,9 @@
     overflow-x: scroll;
 
     .post-detail-bottom-middle {
-      width:100%;
+      width: 100%;
       min-width: 800px;
+
       .table-content {
         min-height: 800px !important;
       }
@@ -172,7 +180,7 @@
 }
 
 @media screen and (max-width: 1200px) {
-  .post-detail-bottom{
+  .post-detail-bottom {
     border: 1px solid #ccc;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
   }
