add responsive css to index page

--- a/blogweb/app/static/post_list.css
+++ b/blogweb/app/static/post_list.css
@@ -18,6 +18,7 @@
 }
 
 .post-list-middle-content {
+  width:60%;
   margin-left: 16px;
 }
 
@@ -55,7 +56,6 @@
 .post-list-date {
   display: flex;
   flex-direction: column;
-  width: 200px;
   color: black;
   justify-content: center;
   width: 100%;
