--- a/blogweb/app/static/index.css
+++ b/blogweb/app/static/index.css
@@ -210,6 +210,7 @@
 
 .index-tabcontent-post {
   min-height: 800px !important;
+  overflow-x: scroll;
 }
 
 .index-tabcontent:first-child {
@@ -231,12 +232,12 @@
 }
 
 .index-title-left {
-  width: 80px !important;
+  min-width: 80px !important;
 }
 
 .index-title-middle {
   left: 0;
-  width: 60%;
+  min-width: 60%;
   margin-left: 4px;
 }
 
@@ -256,6 +257,9 @@
 
 .index-title-date {
   width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .questionform {
