--- a/blogweb/app/static/user.css
+++ b/blogweb/app/static/user.css
@@ -136,3 +136,55 @@
   text-align: center;
 
 }
+
+.user-table-title {
+  padding: 8px;
+  height: 40px;
+  width: 100%;
+  background-color: #6C757D;
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
+  color: #fff;
+  font-size: 16px;
+  border-radius: 10px;
+}
+
+.user-table-title-left {
+  min-width: 80px !important;
+}
+.user-table-title-middle {
+  left: 0;
+  min-width: 60%;
+  display: flex;
+  flex-direction: row;
+  margin-left: 4px;
+}
+.user-table-reply-title {
+  width: 90%;
+  display: flex;
+  align-items: center;
+}
+
+.user-table-reply-id {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 10%;
+
+}
+.user-table-title-right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 40%;
+}
+.user-table-title-action {
+  display: flex;
+  align-items: center;
+  min-width: 120px;
+  justify-content: center;
+}
+.user-table-title-date {
+  width: 200px;
+}
