delete unused html file and add responsive css

--- a/blogweb/app/templates/user.html
+++ b/blogweb/app/templates/user.html
@@ -186,22 +186,22 @@
 
               <div class="user-table-title">
                 <div class="user-table-title-left">
-                  Forums
+                  Post
                 </div>
-                <div class="user-table-title-middle">
-                  <div class="user-table-reply-title">
+                <div class="user-reply-table-title-middle">
+                  <div class="user-reply-table-title">
                     Reply
                   </div>
-                  <div class="user-table-reply-id">
+                  <div class="user-reply-table-id">
                     ID
                   </div>
 
                 </div>
-                <div class="user-table-title-right">
-                  <div class="user-table-title-action">
+                <div class="user-reply-table-title-right">
+                  <div class="user-reply-table-title-action">
                     Action
                   </div>
-                  <div class="user-table-title-date">
+                  <div class="user-reply-table-title-date">
                     Date
                   </div>
 
