--- a/blogweb/app/static/index.css
+++ b/blogweb/app/static/index.css
@@ -204,12 +204,13 @@
 .index-tabcontent {
   margin-top: 14px;
   display: none;
+  overflow-x: scroll;
 }
 
 
 .index-tabcontent-post {
   min-height: 800px !important;
-  overflow-x: scroll;
+  min-width:800px
 }
 
 .index-tabcontent:first-child {
@@ -236,7 +237,7 @@
 
 .index-title-middle {
   left: 0;
-  min-width: 60%;
+  min-width: 50%;
   margin-left: 4px;
 }
 
@@ -267,4 +268,10 @@
   padding: 3%;
   border-radius: 10px;
 
+}
+@media screen and (max-width: 1200px) {
+  .index-tabcontent{
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  }
 }
