--- a/blogweb/app/static/post_detail.css
+++ b/blogweb/app/static/post_detail.css
@@ -111,22 +111,22 @@
 
 
 .post-detail-reply-title {
-  width: 90%;
+  min-width: 90%;
   display: flex;
   align-items: center;
 }
 
 .post-detail-reply-id {
+  min-width: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 10%;
 
 }
 
 .post-detail-title-middle {
   left: 0;
-  min-width: 60%;
+  min-width: 58%;
   display: flex;
   flex-direction: row;
   margin-left: 4px;
@@ -137,21 +137,22 @@
 }
 
 .post-detail-title-date {
-  width: 200px;
-}
+  display: flex;
+  align-items: center;
+  min-width: 180px;
+  justify-content: center;}
 
 .post-detail-title-action {
   display: flex;
   align-items: center;
-  min-width: 120px;
+  min-width: 100px;
   justify-content: center;
 }
 
 .post-detail-title-right {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  min-width: 40%;
+  min-width: 130px;
 }
 
 .tabcontent-post-detail-title {
@@ -169,7 +170,7 @@
 
 .post-detail-bottom-middle {
   width: 100%;
-  min-width: 800px;
+  min-width: 900px;
 }
 
 .post-detail-bottom {
@@ -177,8 +178,6 @@
   display: flex;
   overflow-x: scroll;
 }
-
-.post-detail {}
 
 @media screen and (max-width: 1200px) {
   .post-detail-bottom {
