--- a/blogweb/app/static/post_list.css
+++ b/blogweb/app/static/post_list.css
@@ -9,7 +9,7 @@
 .post-list-middle {
   display: flex;
   flex-direction: column;
-  min-width: 60%;
+  min-width: 50%;
 }
 
 .user_popup{
@@ -19,7 +19,7 @@
 
 .post-list-middle-content {
   width:60%;
-  margin-left: 16px;
+  margin-left: 20px;
 }
 
 .post-list-title-text {
@@ -39,10 +39,8 @@
 }
 
 .post-list-count {
-  height: 100%;
   min-width: 100px;
   font-size: 20px;
-  margin-top: 10px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -55,10 +53,9 @@
 
 .post-list-date {
   display: flex;
-  flex-direction: column;
   color: black;
   justify-content: center;
-  width: 100%;
+  min-width: 200px;
 
 }
 .post-list {
