--- a/blogweb/app/static/reply_list.css
+++ b/blogweb/app/static/reply_list.css
@@ -1,19 +1,25 @@
 
-.reply-left {
+.reply-list-left {
   width: 80px;
 }
 .user_popup {
   width: 20px;
   text-decoration: none;
 }
+.reply-list-middle {
+  display: flex;
+  flex-direction: row;
+  min-width: 58%;
+}
 .reply-list-middle-content {
   margin-left: 16px;
   display: flex;
   flex-direction: column;
-  min-width:90%;
+  min-width: 90%;;
 }
+
 .reply-list-middle-id{
-  min-width:4%;
+  min-width: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -23,16 +29,11 @@
   text-decoration: none;
 }
 
-
 .reply-list {
   display: flex;
   align-items: center;
 }
-.reply-list-middle {
-  display: flex;
-  flex-direction: row;
-  min-width: 60%;
-}
+
 .reply-list-title {
   font-size: 24px;
   margin-top: 10px;
@@ -43,12 +44,12 @@
 .reply-list-date {
   display: flex;
   justify-content: center;
-  width: 100%;
+  min-width: 200px;
 }
 
 .reply-list-delete {
   height: 100%;
-  min-width: 120px;
+  min-width: 100px;
   font-size: 20px;
   margin-top: 10px;
   white-space: nowrap;
