--- a/blogweb/app/templates/reset-request.html
+++ b/blogweb/app/templates/reset-request.html
@@ -3,7 +3,7 @@
 	<div class="flip-container">
 		<div class="flipper" id="flipper">
 			<div class="reset" id="reset">
-				<form class="form-container" action="" method="POST" novalidate>
+				<form class="form-container" action="reset-requset" method="POST" novalidate>
 					{{ form.hidden_tag() }}
 					<h1 class="form-title">Reset Password</h1>
 					<div class="form-content">
