fix repsonsive css for user profile page

--- a/blogweb/app/static/user.css
+++ b/blogweb/app/static/user.css
@@ -85,6 +85,9 @@
 }
 
 .user-send-message {
+  margin-top:10px;
+}
+.user-send-message-text {
   text-decoration: none;
 }
 
@@ -211,5 +214,6 @@
   .user-tabcontent {
     border: 1px solid #ccc;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding:12px;
   }
 }
