--- a/blogweb/app/static/search_result.css
+++ b/blogweb/app/static/search_result.css
@@ -8,6 +8,11 @@
 }
 .search-result-page {
   width: 80%;
+  overflow-x:scroll;
+}
+.search-result-table{
+  min-height: 800px !important;
+  min-width: 800px !important;
 }
 .search-result-table-title {
   padding: 8px;
@@ -20,4 +25,11 @@
   color: white;
   font-size: 16px;
   border-radius: 10px;
+}
+@media screen and (max-width: 1200px) {
+  .search-result-page {
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    padding:12px;
+  }
 }
