fix change the page to 1 when switching tabs

--- a/blogweb/app/templates/index.html
+++ b/blogweb/app/templates/index.html
@@ -288,7 +288,7 @@
 		window.addEventListener('DOMContentLoaded', function () {
 		
 			let navlink = document.getElementsByClassName("nav-link");
-			var activeTab = sessionStorage.getItem('activeTab');
+			let activeTab = sessionStorage.getItem('activeTab');
 
 			if (activeTab == "tab1") {
 				navlink[0].className = "nav-link active";
