change the responsive of the message box and fix form actions bugs

--- a/blogweb/app/templates/register.html
+++ b/blogweb/app/templates/register.html
@@ -3,7 +3,7 @@
 	<div class="flip-container">
 		<div class="flipper" id="flipper">
 			<div class="register" id="register">
-				<form class="form-container" id="register-form" action="register" method="POST" novalidate>
+				<form class="form-container" id="register-form" action="#" method="POST" novalidate>
 					{{ form.hidden_tag() }}
 					<h1 class="form-title">Register</h1>
 					<div class="form-content">
