--- a/blogweb/app/templates/reset.html
+++ b/blogweb/app/templates/reset.html
@@ -3,7 +3,7 @@
 	<div class="flip-container">
 		<div class="flipper" id="flipper">
 			<div class="reset" id="reset">
-				<form class="form-container" id="reset-form" action="reset" method="POST" novalidate>
+				<form class="form-container" id="reset-form" action="#" method="POST" novalidate>
 					{{ form.hidden_tag() }}
 					<h1 class="form-title">Reset Password</h1>
 					<div class="form-content">
