--- a/blogweb/app/static/post_detail.css
+++ b/blogweb/app/static/post_detail.css
@@ -3,7 +3,12 @@
   border-radius: 10px;
   background-color: rgba(255, 255, 255, 0.871);
 }
+.post-detail-top-title{
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  word-break: break-all;
 
+}
 .post-container {
   display: flex;
   justify-content: center;
@@ -177,6 +182,7 @@
   padding-top: 20px;
   display: flex;
   overflow-x: scroll;
+  overflow-y:hidden;
 }
 
 @media screen and (max-width: 1200px) {
