--- a/blogweb/app/templates/register.html
+++ b/blogweb/app/templates/register.html
@@ -48,7 +48,7 @@
 					<p class="reminder">
 						Already have an account?
 						<br>
-						<a class="flipbutton" href="{{ url_for('login') }}">Login Here</a>
+						<a class="flipbutton" href="{{ url_for('main.login') }}">Login Here</a>
 					</p>
 				</form>
 			</div>
