--- a/blogweb/app/templates/welcome.html
+++ b/blogweb/app/templates/welcome.html
@@ -24,8 +24,8 @@
           and find inspiration for your next journey.
           Let's explore together!</p>
         <div class="nav-btn">
-          <a href="{{ url_for('login') }}">Log in</a>
-          <a href="{{ url_for('register') }}">Sign up</a>
+          <a href="{{ url_for('main.login') }}">Log in</a>
+          <a href="{{ url_for('main.register') }}">Sign up</a>
         </div>
       </div>
     </div>
@@ -66,7 +66,7 @@
         <div class="column">
           <h3>Other</h3>
           <ul>
-            <li><a href="{{ url_for('references')}}">References</a></li>
+            <li><a href="{{ url_for('main.references')}}">References</a></li>
           </ul>
         </div>
       </div>
